--- a/org.eclipse.help.webapp/advanced/tocTree.css
+++ b/org.eclipse.help.webapp/advanced/tocTree.css
@@ -76,32 +76,13 @@ A:hover{
 
 A.active{ 
 	color:HighlightText;
+	background:Highlight;
 	width:100%;
 }
 
 A.active:hover{
 	text-decoration:underline; 
 }
-
-<%
-if (requestData.isSafari()){
-%>
-
-A.active{ 
-	background:DarkBlue;
-}
-
-<% 
-} else {
-%>
-
-A.active{ 
-	background:Highlight;
-}
-
-<%
-}
-%>
 
 A.nolink {
 	text-decoration:none; 
